[project]
name = "fabrik-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "imanetamouh7-bit", email = "imane.tamouh7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fabrik-frontend = "fabrik_frontend:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
